edit margin and gh-pages

--- a/src/assets/Sass/_components.scss
+++ b/src/assets/Sass/_components.scss
@@ -4,7 +4,7 @@
     max-width: 800px;
     background-color: $Very-light-grayish-blue;
     margin: 0rem auto;
-    padding: 1rem;
+    padding: 2rem 1rem;
 
     &__header {
         display: flex;
