--- a/src/assets/Sass/_base.scss
+++ b/src/assets/Sass/_base.scss
@@ -48,7 +48,7 @@ $font-family: 'Plus Jakarta sans', sans-serif;
 
 
 body {
-    background-color: $Light-grayish-blue-1;
+    background-color: $Very-light-grayish-blue;
     font-family: $font-family;
     //desktop
     @include desktop {
